--- a/theme/congoro/index.html
+++ b/theme/congoro/index.html
@@ -85,7 +85,7 @@
 <h2>Construction</h2>
 <h2>Construction</h2>
 </div>
-<h1 data-animation="pulse" data-delay=".4s">Srinivas starts with a dream and a plan</h1>
+<h1 data-animation="pulse" data-delay=".4s">We starts with a dream and a plan</h1>
 <span data-animation="fadeInUp" data-delay=".3s" style="animation-delay: 0.3s;" class=""><a href="#">Discover Work</a></span>
 </div>
 </div>
