--- a/index.html
+++ b/index.html
@@ -127,11 +127,22 @@ help you</h2>
 <img src="assets/img/icon/time.svg" alt="">
 </div>
 <div class="contact-cap">
-<h4>Opening Hour</h4>
-<p>10 A.M to 6 P.M</p>
+<h4>Another Location</h4>
+<p>H.NO 4860 Feet Road, Nagarbhavi Bengaluru, Karnataka, 560078</p>
 </div>
 </div>
 </div>
+<div class="single-caption d-none d-xl-block wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+    <div class="caption">
+    <div class="icon">
+    <img src="assets/img/icon/air.svg" alt="">
+    </div>
+    <div class="contact-cap">
+    <h4>Opening Hour</h4>
+    <p>10 A.M to 6 P.M</p>
+    </div>
+    </div>
+    </div>
 </div>
 </div>
 
@@ -231,95 +242,66 @@ India’s garment industry is celebrated for its diverse styles, vibrant textile
 
 
 
-
 <section class="about-area section-padding" id="work">
-<div class="container wrapper-border">
-<div class="row align-items-center">
-<div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12">
-<div class="about-img">
-    <video controls width="500px" height="500px">
-        <source src="/clother.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-</div>
-</div>
-<div class="col-xxl-5 col-xl-6 col-lg-6 col-md-9">
-<div class="about-caption">
-
-<div class="section-tittle section-tittle2 mb-25">
-<h2>OUR WORK</h2>
-<p class="pt-20 pb-20">In this video, we showcase our garments packaging process and the high-quality craftsmanship that goes into each piece. From the careful selection of materials to the final touches, every step is designed to ensure that our customers receive garments that are not only stylish but also meticulously crafted. Watch the video to see our dedication to excellence in every package.</p>
-</div>
-</div>
-</div>
-</div>
-</div>
+    <div class="container wrapper-border">
+        <div class="row align-items-center">
+            <!-- Video Column -->
+            <div class="col-12 col-md-6 mb-4 mb-md-0">
+                <div class="about-img text-center text-md-left">
+                    <video controls class="w-100" style="max-width: 500px;">
+                        <source src="/clother.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+            <!-- Text Column -->
+            <div class="col-12 col-md-6">
+                <div class="about-caption">
+                    <div class="section-tittle section-tittle2 mb-25">
+                        <h2>OUR WORK</h2>
+                        <p class="pt-20 pb-20">In this video, we showcase our garments packaging process and the high-quality craftsmanship that goes into each piece. From the careful selection of materials to the final touches, every step is designed to ensure that our customers receive garments that are not only stylish but also meticulously crafted. Watch the video to see our dedication to excellence in every package.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+<!-- Location and Contact Section (Visible on Mobile Only) -->
+<section class="d-block d-md-none py-3" style="background-color: #ff4d4d;">
+    <div class="container">
+        <div class="row">
+            <!-- Location -->
+            <div class="col-12 mb-3">
+                <div class="d-flex align-items-center">
+                    <i class="fas fa-map-marker-alt mr-3" style="color: white; font-size: 1.5rem;"></i>
+                    <span style="color: white; font-size: 1.1rem;">
+                        Head Office <br>
+                        HIG A-46, Santosh Nagar,New Santosh Nagar,Hyderabad</span>
+                </div>
+                <div class="d-flex align-items-center">
+                    <i class="fas fa-map-marker-alt mr-3" style="color: white; font-size: 1.5rem;"></i>
+                    <span style="color: white; font-size: 1.1rem;">H.NO 4860 Feet Road, Nagarbhavi Bengaluru, Karnataka, 560078</span>
+                </div>
+            </div>
+            <!-- Contact Number -->
+            <div class="col-12">
+                <div class="d-flex align-items-center">
+                    <i class="fas fa-phone-alt mr-3" style="color: white; font-size: 1.5rem;"></i>
+                    <span style="color: white; font-size: 1.1rem;">+123 456 7890</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Include FontAwesome for Icons (Optional) -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+
 
 
 
 </main>
-<footer>
-<div class="footer-area footer-padding">
-<div class="footer-wrapper ">
-<div class="container">
-<div class="row d-flex justify-content-between">
-<div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
-<div class="single-footer-caption mb-50">
-<div class="single-footer-caption mb-30">
 
-<div class="footer-logo mb-25">
-<a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
-</div>
-<div class="footer-tittle">
-<div class="footer-pera">
-<p>Welcome to Nizami Enterprises – Your Gateway to Global Trade</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="offset-xl-1 col-xl-2 col-lg-2 col-md-4 col-sm-5">
-<div class="single-footer-caption mb-50">
-<div class="footer-tittle">
-</div>
-</div>
-</div>
-<div class="col-xl-2 col-lg-2 col-md-4 col-sm-5">
-<div class="single-footer-caption mb-50">
-<div class="footer-tittle">
-<h4>Contact</h4>
-<ul>
-<li><a href="#">HNO 4860 Feet road, Nagarbhavi Bengaluru, Karnataka, 560078</a></li>
-<li><a href="#">Business</a></li>
-<li class="number"><a href="#">+91 9110717165</a></li>
-<li class="number"><a href="#">+91 8179348988</a></li>
-</ul>
-</div>
-</div>
-</div>
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-<div class="single-footer-caption mb-50">
-</div>
-</div>
-</div>
-
-<div class="footer-bottom-area">
-<div class="container">
-<div class="footer-border">
-<div class="row d-flex align-items-center">
-<div class="col-xl-12 ">
-<div class="footer-copy-right text-center">
-<p>Copyright ©<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" rel="nofollow noopener">Colorlib</a></p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</footer>
 
 <div id="back-top">
 <a class="wrapper" title="Go to Top" href="#">
