--- a/index.html
+++ b/index.html
@@ -287,8 +287,13 @@ India’s garment industry is celebrated for its diverse styles, vibrant textile
             <div class="col-12">
                 <div class="d-flex align-items-center">
                     <i class="fas fa-phone-alt mr-3" style="color: white; font-size: 1.5rem;"></i>
-                    <span style="color: white; font-size: 1.1rem;">+123 456 7890</span>
+                    <span style="color: white; font-size: 1.1rem;">+91 9110717165</span>
                 </div>
+                <div class="col-12">
+                    <div class="d-flex align-items-center">
+                        <i class="fas fa-phone-alt mr-3" style="color: white; font-size: 1.5rem;"></i>
+                        <span style="color: white; font-size: 1.1rem;">+91 8179348988</span>
+                    </div>
             </div>
         </div>
     </div>
