removed view gallery

--- a/foot.html
+++ b/foot.html
@@ -47,7 +47,7 @@
     <div class="row">
         <div class="col-lg-3 col-md-4 col-6 mb-4">
             <a href="/shoes/shoea.jpg" class="d-block mb-4 h-100" data-toggle="modal" data-target="#imageModal" data-imgsrc="/shoes/shoea.jpg">
-                <img class="img-fluid img-thumbnail" src="/shoe/shoea.jpg" alt="Image 1">
+                <img class="img-fluid img-thumbnail" src="/shoes/shoea.jpg" alt="Image 1">
             </a>
         </div>
         <div class="col-lg-3 col-md-4 col-6 mb-4">
