removed view gallery

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Nizamis Enterprises</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/x-icon" href="assets/img/icon/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="/icon.svg">
 
 <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
@@ -172,14 +172,14 @@ help you</h2>
 <div class="tailor-details">
 <div class="details-singe mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
 <h2>Our Promise</h2>
-<p>    Welcome to Nizami Enterprises – Your Gateway to Global Trade</p>
+<p>    Welcome to Nizamis Enterprises – Your Gateway to Global Trade</p>
 </div>
 <div class="details-sinlge wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
 <h2>Our Promise</h2>
 <p>
 
     
-    At Nizami Enterprises, we specialize in the seamless transportation and trading of high-quality goods from India to markets around the world. With a deep commitment to excellence, we bridge the gap between Indian craftsmanship and international demand, ensuring that your products reach their destination with speed, security, and unmatched reliability.
+    At Nizamis Enterprises, we specialize in the seamless transportation and trading of high-quality goods from India to markets around the world. With a deep commitment to excellence, we bridge the gap between Indian craftsmanship and international demand, ensuring that your products reach their destination with speed, security, and unmatched reliability.
     
     </p>
 
