--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 </head>
 <body>
 <header>
+    
 <div class="header-area header-transparent">
 <div class="main-header header-sticky">
 <div class="container-fluid">
 <div class="d-flex align-items-center justify-content-between flex-wrap">
-<div class="header-info-left d-flex align-items-center">
+<div class="header-info-left d-flex align-items-center"><div class="logo">
+    <a href="index.html"><img src="/icon.svg" alt=""></a>
+    </div>
 
-<div class="logo">
-<a href="index.html"><img src="/icon.svg" alt=""></a>
-</div>
 
 <div class="main-menu d-none d-lg-block">
 <nav>
