--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Nizamis Enterprises</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/x-icon" href="/icon.svg">
+<link rel="shortcut icon" type="image/x-icon" href="/images.jpeg">
 
 <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
@@ -26,7 +26,7 @@
 <div class="container-fluid">
 <div class="d-flex align-items-center justify-content-between flex-wrap">
 <div class="header-info-left d-flex align-items-center"><div class="logo">
-    <a href="index.html"><img src="/icon.svg" alt=""></a>
+    <a href="index.html"><img src="images.jpeg" alt=""></a>
     </div>
 
 
