--- a/foot.html
+++ b/foot.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
     <!-- Bootstrap CSS -->
-    <link rel="shortcut icon" type="image/x-icon" href="/icon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="/images.jpeg">
 
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
@@ -28,7 +28,7 @@
         <div class="header-info-left d-flex align-items-center">
         
         <div class="logo">
-        <a href="index.html"><img src="/icon.svg" alt=""></a>
+        <a href="index.html"><img src="/images.jpeg" alt=""></a>
         </div>
     
         </div>
