--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ help you</h2>
 
 <div class="tailor-details">
 <div class="details-singe mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-<h2>Welcome</h2>
+<h1 class="text-center">Welcome</h1>
 <p>    Welcome to Nizamis Enterprises – Your Gateway to Global Trade</p>
 </div>
 <div class="details-sinlge wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
